Joanneum.Robotics.Ros.MessageParser/AntlrGeneratedCode/Joanneum/Robotics/Ros/MessageParser/RosMessageParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:/BRG/Projekte/RosMessageParser/Joanneum.Robotics.Ros.MessageParser\RosMessage.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Joanneum.Robotics.Ros.MessageParser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class RosMessageParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, BOOL=5, INT8=6, UINT8=7, INT16=8, UINT16=9, 
		INT32=10, UINT32=11, INT64=12, UINT64=13, FLOAT32=14, FLOAT64=15, STRING=16, 
		TIME=17, DURATION=18, ASSIGNMENT=19, PLUS=20, MINUS=21, SHARP=22, TRUE=23, 
		FALSE=24, MESSAGE_SEPARATOR=25, NEWLINE=26, IDENTIFIER=27, INTEGER_LITERAL=28, 
		REAL_LITERAL=29, STRING_CONST_ASSIGNMENT=30, COMMENT=31, ROSBAG_MESSAGE_SEPARATOR=32, 
		WHITESPACES=33;
	public const int
		RULE_ros_file_input = 0, RULE_ros_message = 1, RULE_ros_action = 2, RULE_ros_service = 3, 
		RULE_rosbag_input = 4, RULE_rosbag_nested_message = 5, RULE_linebreaks = 6, 
		RULE_field_declaration = 7, RULE_constant_declaration = 8, RULE_comment = 9, 
		RULE_identifier = 10, RULE_type = 11, RULE_base_type = 12, RULE_ros_type = 13, 
		RULE_array_type = 14, RULE_variable_array_type = 15, RULE_fixed_array_type = 16, 
		RULE_numeric_type = 17, RULE_integral_type = 18, RULE_floating_point_type = 19, 
		RULE_temportal_type = 20, RULE_string_type = 21, RULE_boolean_type = 22, 
		RULE_sign = 23, RULE_integral_value = 24, RULE_floating_point_value = 25, 
		RULE_bool_value = 26;
	public static readonly string[] ruleNames = {
		"ros_file_input", "ros_message", "ros_action", "ros_service", "rosbag_input", 
		"rosbag_nested_message", "linebreaks", "field_declaration", "constant_declaration", 
		"comment", "identifier", "type", "base_type", "ros_type", "array_type", 
		"variable_array_type", "fixed_array_type", "numeric_type", "integral_type", 
		"floating_point_type", "temportal_type", "string_type", "boolean_type", 
		"sign", "integral_value", "floating_point_value", "bool_value"
	};

	private static readonly string[] _LiteralNames = {
		null, "'MSG:'", "'/'", "'['", "']'", "'bool'", null, null, "'int16'", 
		"'uint16'", "'int32'", "'uint32'", "'int64'", "'uint64'", "'float32'", 
		"'float64'", "'string'", "'time'", "'duration'", "'='", "'+'", "'-'", 
		"'#'", "'True'", "'False'", "'---'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, "BOOL", "INT8", "UINT8", "INT16", "UINT16", 
		"INT32", "UINT32", "INT64", "UINT64", "FLOAT32", "FLOAT64", "STRING", 
		"TIME", "DURATION", "ASSIGNMENT", "PLUS", "MINUS", "SHARP", "TRUE", "FALSE", 
		"MESSAGE_SEPARATOR", "NEWLINE", "IDENTIFIER", "INTEGER_LITERAL", "REAL_LITERAL", 
		"STRING_CONST_ASSIGNMENT", "COMMENT", "ROSBAG_MESSAGE_SEPARATOR", "WHITESPACES"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "RosMessage.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static RosMessageParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public RosMessageParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public RosMessageParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Ros_file_inputContext : ParserRuleContext {
		public Ros_messageContext ros_message() {
			return GetRuleContext<Ros_messageContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(RosMessageParser.Eof, 0); }
		public Ros_actionContext ros_action() {
			return GetRuleContext<Ros_actionContext>(0);
		}
		public Ros_serviceContext ros_service() {
			return GetRuleContext<Ros_serviceContext>(0);
		}
		public Ros_file_inputContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ros_file_input; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.EnterRos_file_input(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.ExitRos_file_input(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRosMessageVisitor<TResult> typedVisitor = visitor as IRosMessageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRos_file_input(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Ros_file_inputContext ros_file_input() {
		Ros_file_inputContext _localctx = new Ros_file_inputContext(Context, State);
		EnterRule(_localctx, 0, RULE_ros_file_input);
		try {
			State = 63;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 54; ros_message();
				State = 55; Match(Eof);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 57; ros_action();
				State = 58; Match(Eof);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 60; ros_service();
				State = 61; Match(Eof);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Ros_messageContext : ParserRuleContext {
		public LinebreaksContext[] linebreaks() {
			return GetRuleContexts<LinebreaksContext>();
		}
		public LinebreaksContext linebreaks(int i) {
			return GetRuleContext<LinebreaksContext>(i);
		}
		public Field_declarationContext[] field_declaration() {
			return GetRuleContexts<Field_declarationContext>();
		}
		public Field_declarationContext field_declaration(int i) {
			return GetRuleContext<Field_declarationContext>(i);
		}
		public Constant_declarationContext[] constant_declaration() {
			return GetRuleContexts<Constant_declarationContext>();
		}
		public Constant_declarationContext constant_declaration(int i) {
			return GetRuleContext<Constant_declarationContext>(i);
		}
		public CommentContext[] comment() {
			return GetRuleContexts<CommentContext>();
		}
		public CommentContext comment(int i) {
			return GetRuleContext<CommentContext>(i);
		}
		public Ros_messageContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ros_message; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.EnterRos_message(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.ExitRos_message(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRosMessageVisitor<TResult> typedVisitor = visitor as IRosMessageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRos_message(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Ros_messageContext ros_message() {
		Ros_messageContext _localctx = new Ros_messageContext(Context, State);
		EnterRule(_localctx, 2, RULE_ros_message);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 69;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
				case 1:
					{
					State = 65; linebreaks();
					}
					break;
				case 2:
					{
					State = 66; field_declaration();
					}
					break;
				case 3:
					{
					State = 67; constant_declaration();
					}
					break;
				case 4:
					{
					State = 68; comment();
					}
					break;
				}
				}
				State = 71;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << INT8) | (1L << UINT8) | (1L << INT16) | (1L << UINT16) | (1L << INT32) | (1L << UINT32) | (1L << INT64) | (1L << UINT64) | (1L << FLOAT32) | (1L << FLOAT64) | (1L << STRING) | (1L << TIME) | (1L << DURATION) | (1L << NEWLINE) | (1L << IDENTIFIER) | (1L << COMMENT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Ros_actionContext : ParserRuleContext {
		public Ros_messageContext[] ros_message() {
			return GetRuleContexts<Ros_messageContext>();
		}
		public Ros_messageContext ros_message(int i) {
			return GetRuleContext<Ros_messageContext>(i);
		}
		public ITerminalNode[] MESSAGE_SEPARATOR() { return GetTokens(RosMessageParser.MESSAGE_SEPARATOR); }
		public ITerminalNode MESSAGE_SEPARATOR(int i) {
			return GetToken(RosMessageParser.MESSAGE_SEPARATOR, i);
		}
		public Ros_actionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ros_action; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.EnterRos_action(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.ExitRos_action(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRosMessageVisitor<TResult> typedVisitor = visitor as IRosMessageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRos_action(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Ros_actionContext ros_action() {
		Ros_actionContext _localctx = new Ros_actionContext(Context, State);
		EnterRule(_localctx, 4, RULE_ros_action);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 73; ros_message();
			State = 74; Match(MESSAGE_SEPARATOR);
			State = 75; ros_message();
			State = 76; Match(MESSAGE_SEPARATOR);
			State = 77; ros_message();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Ros_serviceContext : ParserRuleContext {
		public Ros_messageContext[] ros_message() {
			return GetRuleContexts<Ros_messageContext>();
		}
		public Ros_messageContext ros_message(int i) {
			return GetRuleContext<Ros_messageContext>(i);
		}
		public ITerminalNode MESSAGE_SEPARATOR() { return GetToken(RosMessageParser.MESSAGE_SEPARATOR, 0); }
		public Ros_serviceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ros_service; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.EnterRos_service(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.ExitRos_service(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRosMessageVisitor<TResult> typedVisitor = visitor as IRosMessageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRos_service(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Ros_serviceContext ros_service() {
		Ros_serviceContext _localctx = new Ros_serviceContext(Context, State);
		EnterRule(_localctx, 6, RULE_ros_service);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79; ros_message();
			State = 80; Match(MESSAGE_SEPARATOR);
			State = 81; ros_message();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Rosbag_inputContext : ParserRuleContext {
		public Ros_messageContext ros_message() {
			return GetRuleContext<Ros_messageContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(RosMessageParser.Eof, 0); }
		public Rosbag_nested_messageContext[] rosbag_nested_message() {
			return GetRuleContexts<Rosbag_nested_messageContext>();
		}
		public Rosbag_nested_messageContext rosbag_nested_message(int i) {
			return GetRuleContext<Rosbag_nested_messageContext>(i);
		}
		public Rosbag_inputContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rosbag_input; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.EnterRosbag_input(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.ExitRosbag_input(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRosMessageVisitor<TResult> typedVisitor = visitor as IRosMessageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRosbag_input(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Rosbag_inputContext rosbag_input() {
		Rosbag_inputContext _localctx = new Rosbag_inputContext(Context, State);
		EnterRule(_localctx, 8, RULE_rosbag_input);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83; ros_message();
			State = 87;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__0) {
				{
				{
				State = 84; rosbag_nested_message();
				}
				}
				State = 89;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 90; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Rosbag_nested_messageContext : ParserRuleContext {
		public Ros_typeContext ros_type() {
			return GetRuleContext<Ros_typeContext>(0);
		}
		public ITerminalNode NEWLINE() { return GetToken(RosMessageParser.NEWLINE, 0); }
		public Ros_messageContext ros_message() {
			return GetRuleContext<Ros_messageContext>(0);
		}
		public Rosbag_nested_messageContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rosbag_nested_message; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.EnterRosbag_nested_message(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.ExitRosbag_nested_message(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRosMessageVisitor<TResult> typedVisitor = visitor as IRosMessageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRosbag_nested_message(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Rosbag_nested_messageContext rosbag_nested_message() {
		Rosbag_nested_messageContext _localctx = new Rosbag_nested_messageContext(Context, State);
		EnterRule(_localctx, 10, RULE_rosbag_nested_message);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92; Match(T__0);
			State = 93; ros_type();
			State = 94; Match(NEWLINE);
			State = 95; ros_message();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LinebreaksContext : ParserRuleContext {
		public ITerminalNode[] NEWLINE() { return GetTokens(RosMessageParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(RosMessageParser.NEWLINE, i);
		}
		public LinebreaksContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_linebreaks; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.EnterLinebreaks(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.ExitLinebreaks(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRosMessageVisitor<TResult> typedVisitor = visitor as IRosMessageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLinebreaks(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LinebreaksContext linebreaks() {
		LinebreaksContext _localctx = new LinebreaksContext(Context, State);
		EnterRule(_localctx, 12, RULE_linebreaks);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 98;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 97; Match(NEWLINE);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 100;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Field_declarationContext : ParserRuleContext {
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public Array_typeContext array_type() {
			return GetRuleContext<Array_typeContext>(0);
		}
		public CommentContext comment() {
			return GetRuleContext<CommentContext>(0);
		}
		public Field_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_field_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.EnterField_declaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.ExitField_declaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRosMessageVisitor<TResult> typedVisitor = visitor as IRosMessageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitField_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Field_declarationContext field_declaration() {
		Field_declarationContext _localctx = new Field_declarationContext(Context, State);
		EnterRule(_localctx, 14, RULE_field_declaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				{
				State = 102; type();
				}
				break;
			case 2:
				{
				State = 103; array_type();
				}
				break;
			}
			State = 106; identifier();
			State = 108;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				{
				State = 107; comment();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Constant_declarationContext : ParserRuleContext {
		public Integral_typeContext integral_type() {
			return GetRuleContext<Integral_typeContext>(0);
		}
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode ASSIGNMENT() { return GetToken(RosMessageParser.ASSIGNMENT, 0); }
		public Integral_valueContext integral_value() {
			return GetRuleContext<Integral_valueContext>(0);
		}
		public CommentContext comment() {
			return GetRuleContext<CommentContext>(0);
		}
		public Floating_point_typeContext floating_point_type() {
			return GetRuleContext<Floating_point_typeContext>(0);
		}
		public Floating_point_valueContext floating_point_value() {
			return GetRuleContext<Floating_point_valueContext>(0);
		}
		public Boolean_typeContext boolean_type() {
			return GetRuleContext<Boolean_typeContext>(0);
		}
		public Bool_valueContext bool_value() {
			return GetRuleContext<Bool_valueContext>(0);
		}
		public String_typeContext string_type() {
			return GetRuleContext<String_typeContext>(0);
		}
		public ITerminalNode STRING_CONST_ASSIGNMENT() { return GetToken(RosMessageParser.STRING_CONST_ASSIGNMENT, 0); }
		public Constant_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constant_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.EnterConstant_declaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.ExitConstant_declaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRosMessageVisitor<TResult> typedVisitor = visitor as IRosMessageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstant_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Constant_declarationContext constant_declaration() {
		Constant_declarationContext _localctx = new Constant_declarationContext(Context, State);
		EnterRule(_localctx, 16, RULE_constant_declaration);
		try {
			State = 141;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case INT8:
			case UINT8:
			case INT16:
			case UINT16:
			case INT32:
			case UINT32:
			case INT64:
			case UINT64:
				EnterOuterAlt(_localctx, 1);
				{
				State = 110; integral_type();
				State = 111; identifier();
				State = 112; Match(ASSIGNMENT);
				State = 113; integral_value();
				State = 115;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
				case 1:
					{
					State = 114; comment();
					}
					break;
				}
				}
				break;
			case FLOAT32:
			case FLOAT64:
				EnterOuterAlt(_localctx, 2);
				{
				State = 117; floating_point_type();
				State = 118; identifier();
				State = 119; Match(ASSIGNMENT);
				State = 122;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
				case 1:
					{
					State = 120; integral_value();
					}
					break;
				case 2:
					{
					State = 121; floating_point_value();
					}
					break;
				}
				State = 125;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
				case 1:
					{
					State = 124; comment();
					}
					break;
				}
				}
				break;
			case BOOL:
				EnterOuterAlt(_localctx, 3);
				{
				State = 127; boolean_type();
				State = 128; identifier();
				State = 129; Match(ASSIGNMENT);
				State = 132;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case TRUE:
				case FALSE:
					{
					State = 130; bool_value();
					}
					break;
				case PLUS:
				case MINUS:
				case INTEGER_LITERAL:
					{
					State = 131; integral_value();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 135;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
				case 1:
					{
					State = 134; comment();
					}
					break;
				}
				}
				break;
			case STRING:
				EnterOuterAlt(_localctx, 4);
				{
				State = 137; string_type();
				State = 138; identifier();
				State = 139; Match(STRING_CONST_ASSIGNMENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommentContext : ParserRuleContext {
		public ITerminalNode COMMENT() { return GetToken(RosMessageParser.COMMENT, 0); }
		public CommentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comment; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.EnterComment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.ExitComment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRosMessageVisitor<TResult> typedVisitor = visitor as IRosMessageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommentContext comment() {
		CommentContext _localctx = new CommentContext(Context, State);
		EnterRule(_localctx, 18, RULE_comment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 143; Match(COMMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdentifierContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(RosMessageParser.IDENTIFIER, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_identifier; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.EnterIdentifier(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRosMessageListener typedListener = listener as IRosMessageListener;
			if (typedListener != null) typedListener.ExitIdentifier(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRosMessageVisitor<TResult> typedVisitor = visitor as IRosMessageVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdentifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IdentifierContext identifier() {
		IdentifierContext _localctx = new IdentifierContext(Context, State);
		EnterRule(_localctx, 20, RULE_identifier);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 145; Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
